--- a/src/Registration/cReg/tests/CMakeLists.txt
+++ b/src/Registration/cReg/tests/CMakeLists.txt
@@ -22,6 +22,8 @@ SET_TARGET_PROPERTIES (REG_TEST_CPLUSPLUS
     PROPERTIES FOLDER ${CMAKE_INSTALL_PREFIX}/bin
     INSTALL_NAME_DIR "Reg")
 TARGET_LINK_LIBRARIES(REG_TEST_CPLUSPLUS PUBLIC Reg)
+TARGET_INCLUDE_DIRECTORIES(REG_TEST_CPLUSPLUS PRIVATE "${Matlab_INCLUDE_DIRS}")
+
 
 # Make into test
 ADD_TEST(NAME REG_TEST_CPLUSPLUS COMMAND REG_TEST_CPLUSPLUS ${CMAKE_SOURCE_DIR} WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
