--- a/src/xGadgetron/mGadgetron/CMakeLists.txt
+++ b/src/xGadgetron/mGadgetron/CMakeLists.txt
@@ -27,7 +27,7 @@ if(BUILD_MATLAB)
   # fix output name and link flags
   SET_TARGET_PROPERTIES(mgadgetron PROPERTIES
         SUFFIX ".${MATLAB_MEX_EXT}" PREFIX "${MATLAB_PREFIX}") 
-  target_link_libraries(mgadgetron csirf cgadgetron iutilities ${Matlab_LIBRARIES} )
+  target_link_libraries(mgadgetron csirf cgadgetron iutilities)# ${Matlab_LIBRARIES} )
 
   INSTALL(TARGETS mgadgetron DESTINATION "${MATLAB_DEST}")
   INSTALL(FILES mgadgetron.h DESTINATION "${MATLAB_DEST}")
