--- a/src/xSTIR/mSTIR/CMakeLists.txt
+++ b/src/xSTIR/mSTIR/CMakeLists.txt
@@ -25,7 +25,7 @@ if(BUILD_MATLAB)
   # fix output name and link flags
   SET_TARGET_PROPERTIES(mstir PROPERTIES
         SUFFIX ".${MATLAB_MEX_EXT}" PREFIX "${MATLAB_PREFIX}") 
-  target_link_libraries(mstir csirf cstir iutilities ${STIR_LIBRARIES} ${Matlab_LIBRARIES})
+  target_link_libraries(mstir csirf cstir iutilities ${STIR_LIBRARIES})# ${Matlab_LIBRARIES})
   INSTALL(TARGETS mstir DESTINATION "${MATLAB_DEST}")
   INSTALL(FILES mstir.h DESTINATION "${MATLAB_DEST}")
   INSTALL(DIRECTORY +sirf DESTINATION "${MATLAB_DEST}")
